[workspace]
members = ["contracts/leaderboard"]

[workspace.dependencies]
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main", features = ["alloc"] }
polkavm-derive = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main", package = "polkavm-derive" }
picoalloc = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main", package = "picoalloc" }
