[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
package = "@rps/leaderboard"

[dependencies]
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main", features = ["alloc"] }
polkavm-derive = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main", package = "polkavm-derive" }
picoalloc = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main", package = "picoalloc" }
