[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
package = "@best/gameever"

[dependencies]
pvm-contract-sdk = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }

[lib]
path = "lib.rs"

[[bin]]
name = "bestnameever"
path = "lib.rs"